<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" >

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />

    </group>

    <item android:title="@string/services">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_ladiesservices"
                    android:icon="@drawable/ic_baseline_female_24"
                    android:title="@string/ladiesservices" />

                <item
                    android:id="@+id/nav_gentsservices"
                    android:icon="@drawable/ic_baseline_male_24"
                    android:title="@string/gentsservices" />

            </group>
        </menu>
    </item>

    <item android:title="@string/profile" >
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="@string/profile" />

                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_baseline_contact_mail_24"
                    android:title="@string/logout" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/logout" />

            </group>
        </menu>
    </item>



</menu>