<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    tools:context=".SignUp.SalonSignUp">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_margin="8dp"
      android:orientation="vertical"
      tools:ignore="UselessParent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/salons_registration"
        android:textAppearance="@android:style/TextAppearance"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_salon_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textColorHint="@android:color/white"
        app:boxStrokeColor="@android:color/white">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/tiet_salon_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/salonname"
          android:text=""
          android:textColor="@android:color/white"
          android:textColorHint="@android:color/white"
          android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_salon_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textColorHint="@android:color/white"
        app:boxStrokeColor="@android:color/white">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/tiet_salon_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/email"
          android:text=""
          android:textColor="@android:color/white"
          android:textColorHint="@android:color/white"
          android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_salon_phoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textColorHint="@android:color/white"
        app:boxStrokeColor="@android:color/white">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/tiet_salon_phoneNo"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/PhoneNo"
          android:text=""
          android:textColor="@android:color/white"
          android:textColorHint="@android:color/white"
          android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_salon_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textColorHint="@android:color/white"
        app:boxStrokeColor="@android:color/white"
        app:passwordToggleEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/tiet_salon_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/Password"
          android:inputType="textPassword"
          android:text=""
          android:textColor="@android:color/white"
          android:textColorHint="@android:color/white"
          android:textSize="20sp" />

      <Button
          android:id="@+id/btn_salon_registration"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:layout_marginLeft="8dp"
          android:layout_marginTop="30dp"
          android:layout_marginRight="8dp"
          android:backgroundTint="@color/regbtncolor"
          android:text="@string/reg"
          android:textAllCaps="false"
          android:textColor="@android:color/white"
          android:textSize="18sp"
          app:cornerRadius="10dp" />


      <TextView
          android:id="@+id/txt_log_in"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/already_have_an_account_log_in"
          android:textColor="@android:color/white"
          android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
  </LinearLayout>
</RelativeLayout>